Added NCEO_AFTER_CONFIGURATION to .qsf file.

--- a/rtl/synth/fpga.qsf
+++ b/rtl/synth/fpga.qsf
@@ -9,6 +9,7 @@ set_global_assignment -name FAMILY "Cyclone 10 LP"
 set_global_assignment -name DEVICE 10CL025YU256C8G
 set_global_assignment -name TOP_LEVEL_ENTITY FPGA
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
+set_global_assignment -name CYCLONEII_RESERVE_NCEO_AFTER_CONFIGURATION "USE AS REGULAR IO"
 
 # PROJECT VHDL FILES
 set_global_assignment -name VHDL_FILE ../comp/base/rst_sync.vhd
